edit works-section link

--- a/index.html
+++ b/index.html
@@ -235,14 +235,14 @@
         <div class="works-wrapper">
           <div class="works__block">
             <div class="works__block__image" id="corporate-site__bg">
-              <a href="http://corporate.iamyuna.work/" class="site-link"></a>
+              <a href="http://corporate.iamyuna.work" class="site-link"></a>
               <img src="images/corporate-site.png" alt="image">
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">架空コーポレートサイト</p>
+              <p class="works__block__textbox__upper"><a href="http://corporate.iamyuna.work">架空コーポレートサイト</a></p>
               <ul class="works__block__textbox__lower">
-                <li>ページ&コンテンツ追加予定</li>
+                <li>ページ&コンテンツ　追加予定</li>
               </ul>
             </div>
           </div>
@@ -253,9 +253,9 @@
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">架空WEBサイト</p>
+              <p class="works__block__textbox__upper"><a href="https://smacam.iamyuna.work">架空WEBサイト</a></p>
               <ul class="works__block__textbox__lower">
-                <li>ページ&コンテンツ追加予定</li>
+                <li>ページ&コンテンツ　追加予定</li>
                 <li>Ruby on RailsまたはLaravelにて開発予定</li>
               </ul>
             </div>
@@ -267,35 +267,36 @@
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">ブログサイト</p>
+              <p class="works__block__textbox__upper"><a href="https://weblog.iamyuna.work">ブログサイト</a></p>
               <ul class="works__block__textbox__lower">
-                <li>WordPressにてデザイン・投稿継続予定</li>
+                <li>WordPressにてデザインカスタマイズ予定</li>
+                <li>投稿継続予定</li>
               </ul>
             </div>
           </div>
-          <div class="works__block">
+          <div class="works__block alert">
             <div class="works__block__image" id="animal__bg">
               <img src="images/circle-petit.png" alt="image">
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">架空スマホアプリ</p>
+              <p class="works__block__textbox__upper">架空スマホアプリデザイン</p>
               <ul class="works__block__textbox__lower">
-                <li>ページ&コンテンツ追加予定</li>
+                <li>ページ&コンテンツ　追加予定</li>
                 <li>SwiftまたはKotlinにて開発予定</li>
               </ul>
             </div>
           </div>
           <div class="works__block">
             <div class="works__block__image" id="webrary__bg">
-              <a href="http://corporate.iamyuna.work" class="site-link"></a>
+              <a href="http://webrary.iamyuna.work" class="site-link"></a>
               <img src="images/webrary.png" alt="image">
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">架空WEBサイト</p>
+              <p class="works__block__textbox__upper"><a href="http://webrary.iamyuna.work">架空WEBサイト</a></p>
               <ul class="works__block__textbox__lower">
-                <li>ページ&コンテンツ追加予定</li>
+                <li>ページ&コンテンツ&機能　追加予定</li>
                 <li>Ruby on RailsまたはLaravelにて開発予定</li>
               </div>
             </div>
