edit font, contents and some scss

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
               <li class="skill__block__lists__row">
@@ -116,8 +116,8 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
             </ul>
@@ -146,8 +146,8 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
               <li class="skill__block__lists__row">
@@ -155,9 +155,29 @@
                 <span class="skill__block__lists__row__stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
-                  <i class="far fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                </span>
+              </li>
+              <li class="skill__block__lists__row">
+                <span>Swift</span>
+                <span class="skill__block__lists__row__stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                </span>
+              </li>
+              <li class="skill__block__lists__row">
+                <span>Kotlin</span>
+                <span class="skill__block__lists__row__stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
             </ul>
@@ -172,8 +192,8 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
               <li class="skill__block__lists__row">
@@ -183,7 +203,7 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
               <li class="skill__block__lists__row">
@@ -192,8 +212,8 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
               <li class="skill__block__lists__row">
@@ -202,8 +222,8 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
               <li class="skill__block__lists__row">
@@ -212,8 +232,8 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
               <li class="skill__block__lists__row">
@@ -222,8 +242,8 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star empty-star"></i>
+                  <i class="fas fa-star empty-star"></i>
                 </span>
               </li>
             </ul>
