add hashtag and edit scss (all-views)

--- a/index.html
+++ b/index.html
@@ -260,10 +260,16 @@
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper"><a href="http://corporate.iamyuna.work">架空コーポレートサイト</a></p>
-              <ul class="works__block__textbox__lower">
-                <li>ページ&コンテンツ　追加予定</li>
-              </ul>
+              <div class="works__block__textbox__inner">
+                <p class="works__block__textbox__upper"><a href="http://corporate.iamyuna.work">架空コーポレートサイト</a></p>
+                <ul class="works__block__textbox__lower">
+                  <li>ページ&コンテンツ　追加予定</li>
+                </ul>
+                <p class="tagbox">
+                  <span class="tagbox__tag"><span class="hashtag">#</span>HTML/CSS</span>
+                  <span class="tagbox__tag"><span class="hashtag">#</span>jQuery</span>
+                </p>
+              </div>
             </div>
           </div>
           <div class="works__block">
@@ -273,11 +279,17 @@
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper"><a href="https://smacam.iamyuna.work">架空WEBサイト</a></p>
-              <ul class="works__block__textbox__lower">
-                <li>ページ&コンテンツ　追加予定</li>
-                <li>Ruby on RailsまたはLaravelにて開発予定</li>
-              </ul>
+              <div class="works__block__textbox__inner">
+                <p class="works__block__textbox__upper"><a href="https://smacam.iamyuna.work">架空WEBサイト</a></p>
+                <ul class="works__block__textbox__lower">
+                  <li>ページ&コンテンツ　追加予定</li>
+                  <li>Ruby on RailsまたはLaravelにて開発予定</li>
+                </ul>
+                <p class="tagbox">
+                  <span class="tagbox__tag"><span class="hashtag">#</span>HTML/CSS</span>
+                  <span class="tagbox__tag"><span class="hashtag">#</span>jQuery</span>
+                </p>
+              </div>
             </div>
           </div>
           <div class="works__block">
@@ -287,11 +299,18 @@
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper"><a href="https://weblog.iamyuna.work">ブログサイト</a></p>
-              <ul class="works__block__textbox__lower">
-                <li>WordPressにてデザインカスタマイズ予定</li>
-                <li>投稿継続予定</li>
-              </ul>
+              <div class="works__block__textbox__inner">
+                <p class="works__block__textbox__upper"><a href="https://weblog.iamyuna.work">ブログサイト</a></p>
+                <ul class="works__block__textbox__lower">
+                  <li>WordPressにてデザインカスタマイズ予定</li>
+                  <li>投稿継続予定</li>
+                </ul>
+                <p class="tagbox">
+                  <span class="tagbox__tag"><span class="hashtag">#</span>HTML/CSS</span>
+                  <span class="tagbox__tag"><span class="hashtag">#</span>jQuery</span>
+                  <span class="tagbox__tag"><span class="hashtag">#</span>Bootstrap</span>
+                </p>
+              </div>
             </div>
           </div>
           <div class="works__block alert">
@@ -300,11 +319,17 @@
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">架空スマホアプリデザイン</p>
-              <ul class="works__block__textbox__lower">
-                <li>ページ&コンテンツ　追加予定</li>
-                <li>SwiftまたはKotlinにて開発予定</li>
-              </ul>
+              <div class="works__block__textbox__inner">
+                <p class="works__block__textbox__upper">架空スマホアプリデザイン</p>
+                <ul class="works__block__textbox__lower">
+                  <li>ページ&コンテンツ　追加予定</li>
+                  <li>SwiftまたはKotlinにて開発予定</li>
+                </ul>
+                <p class="tagbox">
+                  <span class="tagbox__tag"><span class="hashtag">#</span>HTML/CSS</span>
+                  <span class="tagbox__tag"><span class="hashtag">#</span>jQuery</span>
+                </p>
+              </div>
             </div>
           </div>
           <div class="works__block">
@@ -314,10 +339,17 @@
               <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper"><a href="http://webrary.iamyuna.work">架空WEBサイト</a></p>
-              <ul class="works__block__textbox__lower">
-                <li>ページ&コンテンツ&機能　追加予定</li>
-                <li>Ruby on RailsまたはLaravelにて開発予定</li>
+              <div class="works__block__textbox__inner">
+                <p class="works__block__textbox__upper"><a href="http://webrary.iamyuna.work">架空WEBサイト</a></p>
+                <ul class="works__block__textbox__lower">
+                  <li>ページ&コンテンツ&機能　追加予定</li>
+                  <li>Ruby on RailsまたはLaravelにて開発予定</li>
+                </ul>
+                <p class="tagbox">
+                  <span class="tagbox__tag"><span class="hashtag">#</span>HTML/CSS</span>
+                  <span class="tagbox__tag"><span class="hashtag">#</span>jQuery</span>
+                  <span class="tagbox__tag"><span class="hashtag">#</span>skelton</span>
+                </p>
               </div>
             </div>
           </div>
